# GOSE-gaming-operating-system-emulator

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  STRUCTURE.md  requirements-dev.txt  ruff.toml
agent/: README.md  pyproject.toml
agent/client/: __init__.py  cli.py  gose_client.py
agent/examples/: pong_no_screenshots.py
agent/gose_agent/: __init__.py  __main__.py  agent.py  config.py  protocol.py  sandbox.py  server.py
agent/gose_agent/capabilities/: __init__.py  games.py  gamestate.py  input.py  playmap.py  screen.py  system.py
agent/gose_agent/play_maps/: pong1k2p.json  super_tilt_bro.json
agent/gose_agent/play_maps/runners/: pong1k2p_runner.py
agent/gose_agent/profiles/: README.md  mario64.json  pong1k2p.json  super_tilt_bro.json
agent/tests/: test_agent.py  test_ai_grant_token.py  test_audit.py  test_bootmenu.py  test_gamestate.py  test_input.py  test_mcp.py  test_ova.py  test_passthrough.py  test_playmap.py  test_protocol.py  test_sandbox.py  test_seats.py  test_server_roundtrip.py  test_theme.py  test_vm.py
agent/tools/: import_stable_retro.py
ai-bridge/: README.md  bridge.py
docs/: 00-project-brief.md  01-research-findings.md  02-os-install-runbook.md  03-architecture.md  04-decision-log.md  05-ai-control-protocol.md  06-gui-plan.md  07-controllers.md  08-game-state-interface.md  09-toolchain.md  10-boot-menu.md  11-pc-app-and-input.md  12-agent-connection-spec.md  14-ai-hub.md  15-brand.md  16-ai-permission-model.md  17-os-roadmap.md  18-roadmap-build-plans.md  19-license-audit.md  21-widget-standard.md  23-windowing-design.md  README.md  (+13 more)
(+164 files in other folders)
